--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ leptos_router = { version = "0.6", features = ["csr", "nightly"] }
 console_log = "1"
 log = "0.4"
 console_error_panic_hook = "0.1"
+stylers = "1.0.0-alpha"
+
+[build-dependencies]
+stylers = "1.0.0-alpha"
+
+
 
 # utils
 # strum = { version = "0.25", features = ["derive", "strum_macros"] }
@@ -23,6 +29,7 @@ console_error_panic_hook = "0.1"
 wasm-bindgen = "0.2"
 wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = ["Document", "Window"] }
+
 
 
 [profile.release]
